UPDATE : 예외 처리